# EventService

./: CMakeLists.txt  DummySubscriber.hpp  Event.hpp  EventService.cpp  EventService.hpp  NonCopyable.hpp  README.md  Subscriber.cpp  Subscriber.hpp  main.cpp  model. plantuml
src/: Event.cpp  Event.hpp  EventService.cpp  EventService.hpp  Notifier.hpp  Signal.cpp  Signal.hpp  Subscriber.cpp  Subscriber.hpp
src/EventService/: Event.cpp  EventService.hpp  Subscriber.cpp  Subscriber.hpp
src/core/: ActiveObject.hpp
test/: Test_Notifier.cpp  Test_Signal.cpp
